--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,8 @@ site-twitter: #if your site has a twitter account, enter it here
 author: Mark Kahoush # add your name
 author-img: david-freeman.jpg # add your photo
 about-author: I am a computer science major at georgia tech. # add description
-social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: https://github.gatech.edu/mkahoush3 # add your Github handle
-social-linkedin: https://www.linkedin.com/in/mark-kahoush # add your Linkedin handle
+social-github: mkahoush3 # add your Github handle
+social-linkedin: mark-kahoush # add your Linkedin handle
 social-email: markkahoush@hotmail.com # add your Email address
 
 # Disqus
