--- a/_config.yml
+++ b/_config.yml
@@ -10,14 +10,14 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Mark Kahoush # add your name
-author-img: david-freeman.jpg # add your photo
+author-img: Image.jfif # add your photo
 about-author: I am a computer science major at georgia tech. # add description
 social-github: mkahoush3 # add your Github handle
 social-linkedin: mark-kahoush # add your Linkedin handle
 social-email: markkahoush@hotmail.com # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
