--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site-twitter: #if your site has a twitter account, enter it here
 author: Mark Kahoush # add your name
 author-img: Image.jfif # add your photo
 about-author: I am a computer science major at georgia tech. # add description
-social-github: mkahoush3 # add your Github handle
+social-github: mkahoush # add your Github handle
 social-linkedin: mark-kahoush # add your Linkedin handle
 social-email: markkahoush@hotmail.com # add your Email address
 
