--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ about-author: I am a computer science major at georgia tech. # add description
 social-github: mkahoush # add your Github handle
 social-linkedin: mark-kahoush # add your Linkedin handle
 social-email: markkahoush@hotmail.com # add your Email address
+social-scholar: https://scholar.google.com/citations?hl=en&user=nLm228EAAAAJ 
 
 # Disqus
 discus-identifier: # add your discus identifier
