--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 title: Hello, world! I'm Mark Kahoush
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: # this means to ignore newlines until "baseurl:"
+  Senior computer science student at Georgia Tech with specializations in AI and devices. 
+  Interested in internships and research positions in Object-Oriented Software Engineering/Development, 
+  Machine Learning and Computer Vision. 
+  I'm especially passionate in Software Development and Deep Learning and Computer Vision.
 permalink: ':title/'
 baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
